# Learning

./: README.md
Portable/designMode/singleton/: CMakeLists.txt  make.bat
Portable/designMode/singleton/src/: Singleton.cpp  Singleton.hpp  main.cpp
Portable/grammar/Ptr/: CMakeLists.txt  readme.md
Portable/grammar/Ptr/src/: main.cpp
learnjson/: CMakeLists.txt  readme.txt
learnjson/Yang/: README.md
learnjson/Yang/cmake/doc/cmake/html/_static/: documentation_options.js
learnjson/Yang/cmake/doc/cmake/html/command/: add_definitions.html  add_subdirectory.html  aux_source_directory.html  create_test_sourcelist.html  ctest_empty_binary_directory.html  ctest_read_custom_files.html  ctest_upload.html  define_property.html  elseif.html  enable_language.html  enable_testing.html  endblock.html  endif.html  execute_process.html  file.html  find_path.html  foreach.html  function.html  get_target_property.html  get_test_property.html  if.html  include.html  install_files.html  install_programs.html  list.html  load_command.html  message.html  option.html  qt_wrap_cpp.html  qt_wrap_ui.html  separate_arguments.html  site_name.html  target_compile_features.html  target_precompile_headers.html
learnjson/Yang/cmake/doc/cmake/html/cpack_gen/: freebsd.html  ifw.html  innosetup.html  rpm.html  wix.html
learnjson/Yang/cmake/doc/cmake/html/envvar/: ASM_DIALECT.html  CMAKE_BUILD_TYPE.html  CMAKE_EXPORT_COMPILE_COMMANDS.html  CMAKE_GENERATOR_INSTANCE.html  CMAKE_GENERATOR_TOOLSET.html  CMAKE_INSTALL_PREFIX.html  CMAKE_LANG_IMPLICIT_LINK_DIRECTORIES_EXCLUDE.html  CMAKE_MAXIMUM_RECURSION_DEPTH.html  CMAKE_TEST_LAUNCHER.html  CTEST_NO_TESTS_ACTION.html  CXXFLAGS.html  DASHBOARD_TEST_FROM_CTEST.html  FFLAGS.html  HIPCXX.html  HIPHOSTCXX.html  ISPC.html  OBJC.html  RCFLAGS.html  SWIFTC.html
learnjson/Yang/cmake/doc/cmake/html/generator/: Borland Makefiles.html  Sublime Text 2.html  Visual Studio 8 2005.html  Xcode.html  (+1 more)
learnjson/Yang/cmake/man/man1/: ctest.1
learnjson/Yang/cmake/man/man7/: cmake-commands.7  cmake-developer.7  cmake-generators.7  cmake-packages.7  cmake-qt.7  cmake-toolchains.7  cmake-variables.7
learnjson/Yang/program/: CMakeLists.txt  make.bat  make2.bat  readme.txt
learnjson/Yang/program/src/: main.cpp  main1.cpp
learnjson/include/opencv455/include/opencv2/: 连接件5.SLDPRT  连接件5.STL  连接件56.data  零件6.SLDPRT
learnjson/src/: main.cpp
(+2022 files in other folders)
